fixed mobile ui overflowing

--- a/web/components/ui/Header/Header.module.scss
+++ b/web/components/ui/Header/Header.module.scss
@@ -7,7 +7,6 @@
   z-index: 20;
   padding: 0.4rem 0.7rem;
   box-shadow: 0px 1px 3px 1px rgb(0 0 0 / 10%);
-
   background-color: var(--theme-color-background-header);
 
   .logo {
@@ -17,15 +16,9 @@
       color: var(--theme-color-components-text-on-dark);
       font-family: var(--theme-text-display-font-family);
       margin-left: 0.5rem;
-      font-size: 1.5rem;
+      font-size: clamp(1rem, 4vw, 2rem);
       font-weight: 600;
     }
   }
 }
 
-@media (max-width: 768px) {
-  .header {
-    line-height: 5vh;
-    height: 5vh;
-  }
-}
